Kubernetes/INGRESS-Day/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
