Kubernetes/INGRESS-Day/manifests/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web-app
spec:
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
